# suchai-2-software

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_groundstation.sh  build_plantsat.sh  build_plantsat_sim.sh  build_rpi.sh  build_simple.sh  build_suchai2.sh  build_suchai3.sh  init.sh
apps/groundstation/: CMakeLists.txt
apps/groundstation/include/app/payloads/: repoDataSchemaGPS.h  repoDataSchemaGRA.h  repoDataSchemaMAG.h  repoDataSchemaSTT.h
apps/groundstation/include/app/payloads/stt/: repoDataSchemaSTT.h
apps/groundstation/include/app/system/: cmdAX100.h  cmdCDH.h  cmdEPS.h  config.h.in  repoDataSchema.h
apps/groundstation/src/drivers/: install.sh
apps/groundstation/src/system/: cmdAPP.c  cmdAX100.c  cmdCDH.c  cmdEPS.c  hookCommunications.c  main.c
apps/plantsat/: CMakeLists.txt  README.md
apps/plantsat/include/app/drivers/: drivers.h  rwdrv10987.h
apps/plantsat/include/app/system/: TRIADEFK.h  cmdADCS.h  cmdAX100.h  cmdCAM.h  cmdCDH.h  cmdEPS.h  cmdGSSB.h  cmdRW.h  cmdSensors.h  config.h  config.h.in  repoDataSchema.h  taskADCS.h  taskSensors.h
apps/plantsat/src/drivers/: install.sh  rwdrv10987_2.c
apps/plantsat/src/drivers/drivers-sim/: CMakeLists.txt  adcs.c  camera.c  cdh.c  eps.c  interface.c  interface.py
apps/plantsat/src/drivers/drivers-sim/include/drivers-sim/: adcs.h  camera.h  cdh.h  config.h.in  eps.h  interface.h
apps/plantsat/src/system/: TRIADEKF.c  cmdADCS.c  cmdAX100.c  cmdCAM.c  cmdCDH.c  cmdEPS.c  cmdGSSB.c  cmdRW.c  cmdSensors.c  hookCommunications.c  main.c  taskADCS.c  taskHousekeeping.c  taskSensors.c
apps/simple/src/system/: main.c
